--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 
 
 unbind '"'
