--- a/tmux.conf
+++ b/tmux.conf
@@ -2,26 +2,48 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jatap/tmux-base16-statusline'
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-plugins "cpu-usage battery weather ram-usage"
+set -g @dracula-weather-colors "green dark_gray"
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Winchester UK"
+set -g @dracula-show-fahrenheit false
 
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-
-
 unbind '"'
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind C-d split-window -c "#{pane_current_path}"
+bind C-f split-window -h -c "#{pane_current_path}"
+bind - split-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind C-c new-window -c "#{pane_current_path}"
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind K confirm kill-session
+bind-key X if-shell '[ $(tmux list-sessions | wc -l) -ne 1 ]' \
+                    "run-shell 'tmux switch-client -n \\\; kill-session -t \"#S\"'" \
+                    "run-shell 'tmux kill-session -t \"#S\"'"
+
 
 set -g mouse on
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+bind -r C-q resize-pane -L 10
+bind -r C-w resize-pane -D 10
+bind -r C-e resize-pane -U 10
+bind -r C-r resize-pane -R 10
 
+
+run -b '~/.tmux/plugins/tpm/tpm
