--- a/tmux.conf
+++ b/tmux.conf
@@ -2,13 +2,13 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jatap/tmux-base16-statusline'
-#set -g @plugin 'dracula/tmux'
+set -g @plugin 'dracula/tmux'
 
-#set -g @dracula-plugins "cpu-usage battery weather ram-usage"
-#set -g @dracula-weather-colors "green dark_gray"
-#set -g @dracula-show-powerline true
-#set -g @dracula-fixed-location "Southampton UK"
-#set -g @dracula-show-fahrenheit false
+set -g @dracula-plugins "cpu-usage battery weather ram-usage"
+set -g @dracula-weather-colors "green dark_gray"
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Southampton UK"
+set -g @dracula-show-fahrenheit false
 
 unbind C-b
 set-option -g prefix C-a
