--- a/containers/compose/docker-compose.yml
+++ b/containers/compose/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: traefik
     ports:
       - "80:80" # HTTP
-      - "8080:8080" # Traefik Dashboard
+      - "8080:8082" # Traefik Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./traefik.yml:/etc/traefik/traefik.yml:ro
@@ -17,7 +17,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.rule=Host(`traefik.localhost`)"
-      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
+      - "traefik.http.services.traefik.loadbalancer.server.port=8082"
 
   homarr:
     image: ghcr.io/ajnart/homarr:latest
@@ -53,6 +53,8 @@ services:
   mongo:
     image: mongo:latest
     container_name: mongo
+    ports:
+      - "27017:27017"
     networks:
       - toolbelt
     volumes:
@@ -63,6 +65,8 @@ services:
     container_name: mongo-express
     networks:
       - toolbelt
+    ports:
+      - "8081:8081"
     environment:
       ME_CONFIG_MONGODB_SERVER: mongo
       ME_CONFIG_BASICAUTH_USERNAME: admin
