--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,9 @@ bind-key X if-shell '[ $(tmux list-sessions | wc -l) -ne 1 ]' \
                     "run-shell 'tmux switch-client -n \\\; kill-session -t \"#S\"'" \
                     "run-shell 'tmux kill-session -t \"#S\"'"
 
+#bind-key -r , new-window -n sess "zsh -i ~/.code/self/dotfiles/bin/sess"
+bind-key -r , display-popup -w 90% -h 80% -x 5% -y 30% -E "$SHELL -i ~/code/self/dotfiles/bin/sess"
+#bind-key C-, run-shell '~/.code/self/dotfiles/bin/sess-mini'
 
 set -g mouse on
 
