--- a/tmux.conf
+++ b/tmux.conf
@@ -28,7 +28,8 @@ bind-key X if-shell '[ $(tmux list-sessions | wc -l) -ne 1 ]' \
                     "run-shell 'tmux kill-session -t \"#S\"'"
 
 #bind-key -r , new-window -n sess "zsh -i ~/.code/self/dotfiles/bin/sess"
-bind-key -r , display-popup -w 90% -h 80% -x 5% -y 40% -E "zsh --no-rcs ~/code/self/dotfiles/bin/sess"
+bind-key -r , display-popup -w 90% -h 80% -x 5% -y 40% -E "zsh --no-rcs ~/.bin/sess"
+bind-key -r . display-popup -w 90% -h 80% -x 5% -y 40% -E "zsh --no-rcs ~/.bin/clone"
 #bind-key C-, run-shell '~/.code/self/dotfiles/bin/sess-mini'
 
 set -g mouse on
